--- a/User Controls/SearchTeacherUC.xaml
+++ b/User Controls/SearchTeacherUC.xaml
@@ -12,7 +12,7 @@
                FontSize="40" Margin="15,0,0,0" FontWeight="Bold"/>
 
         <!-- Top Search Bar -->
-        <Border Background="#E0E0E0" CornerRadius="25" Height="50" Width="300" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,15,-2">
+        <Border Background="{DynamicResource searchBarColor}" CornerRadius="25" Height="50" Width="300" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,15,-2">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
