--- a/User Controls/MenuUC.xaml
+++ b/User Controls/MenuUC.xaml
@@ -29,8 +29,8 @@
                 </LinearGradientBrush>
             </Border.Background>
             <StackPanel>
-                <TextBlock Text="Grade 1" Foreground="White" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
-                <TextBlock Text="{Binding Grade1Teacher}" Foreground="White" FontWeight="Bold" FontSize="20" HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Top"/>
+                <TextBlock Text="Grade 1" Foreground="{DynamicResource menuCardTextColor}" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
+                <TextBlock Text="{Binding Grade1Teacher}" Foreground="{DynamicResource menuCardTextColor}" FontWeight="Bold" FontSize="20" HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Top"/>
             </StackPanel>
         </Border>
 
@@ -44,7 +44,7 @@
                 </LinearGradientBrush>
             </Border.Background>
             <StackPanel>
-                <TextBlock Text="Grade 2" Foreground="White" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" />
+                <TextBlock Text="Grade 2" Foreground="{DynamicResource menuCardTextColor}" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" />
             </StackPanel>
         </Border>
 
@@ -58,7 +58,7 @@
                 </LinearGradientBrush>
             </Border.Background>
             <StackPanel>
-                <TextBlock Text="Grade 3" Foreground="White" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
+                <TextBlock Text="Grade 3" Foreground="{DynamicResource menuCardTextColor}" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
             </StackPanel>
         </Border>
 
@@ -73,7 +73,7 @@
                 </LinearGradientBrush>
             </Border.Background>
             <StackPanel>
-                <TextBlock Text="Grade 4" Foreground="White" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0"/>
+                <TextBlock Text="Grade 4" Foreground="{DynamicResource menuCardTextColor}" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0"/>
             </StackPanel>
         </Border>
 
@@ -87,7 +87,7 @@
                 </LinearGradientBrush>
             </Border.Background>
             <StackPanel>
-                <TextBlock Text="Grade 5" Foreground="White" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
+                <TextBlock Text="Grade 5" Foreground="{DynamicResource menuCardTextColor}" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
             </StackPanel>
         </Border>
 
@@ -101,7 +101,7 @@
                 </LinearGradientBrush>
             </Border.Background>
             <StackPanel>
-                <TextBlock Text="Grade 6" Foreground="White" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
+                <TextBlock Text="Grade 6" Foreground="{DynamicResource menuCardTextColor}" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
             </StackPanel>
         </Border>
 
@@ -116,7 +116,7 @@
                 </LinearGradientBrush>
             </Border.Background>
             <StackPanel>
-                <TextBlock Text="Grade 7" Foreground="White" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
+                <TextBlock Text="Grade 7" Foreground="{DynamicResource menuCardTextColor}" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
             </StackPanel>
         </Border>
 
@@ -130,7 +130,7 @@
                 </LinearGradientBrush>
             </Border.Background>
             <StackPanel>
-                <TextBlock Text="Grade 8" Foreground="White" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
+                <TextBlock Text="Grade 8" Foreground="{DynamicResource menuCardTextColor}" FontWeight="Bold" FontSize="25" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
             </StackPanel>
         </Border>
 
@@ -143,7 +143,7 @@
                     <GradientStop Color="#104DF2" Offset="1"/>
                 </LinearGradientBrush>
             </Border.Background>
-            <TextBlock Foreground="White" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <TextBlock Foreground="{DynamicResource menuCardTextColor}" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Border>
     </Grid>
 </UserControl>
