--- a/User Controls/SearchStaffUC.xaml
+++ b/User Controls/SearchStaffUC.xaml
@@ -36,6 +36,6 @@
         </Border>
 
         <!-- Data Table -->
-        <DataGrid MouseDoubleClick="StaffDataGrid_MouseDoubleClick" x:Name="StaffDataGrid" IsReadOnly="True"  AutoGenerateColumns="True" Margin="20,80,20,20"/>
+        <DataGrid Background="{DynamicResource dataTableBackground}" MouseDoubleClick="StaffDataGrid_MouseDoubleClick" x:Name="StaffDataGrid" IsReadOnly="True"  AutoGenerateColumns="True" Margin="20,80,20,20"/>
     </Grid>
 </UserControl>
