--- a/ResourceDictionaries/DarkTheme.xaml
+++ b/ResourceDictionaries/DarkTheme.xaml
@@ -2,32 +2,32 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                      xmlns:fa="http://schemas.fontawesome.io/icons/">
     <LinearGradientBrush x:Key="BackgroundBrush" StartPoint="0,0" EndPoint="1,0">
-        <GradientStop Color="#78002E" Offset="0.1"/>
-        <GradientStop Color="#26008F" Offset="1.3"/>
+        <GradientStop Color="#FF0C41" Offset="0.1"/>
+        <GradientStop Color="#3700B6" Offset="1.3"/>
     </LinearGradientBrush>
 
-    <SolidColorBrush x:Key="mainContentBackgroundColor" Color="black" Opacity="0.3"/>
+    <SolidColorBrush x:Key="mainContentBackgroundColor" Color="black" Opacity="0.6"/>
 
     <!--Background Colors-->
-    <Color x:Key="primaryBackColor1">#78002E</Color>
-    <Color x:Key="primaryBackColor2">#26008F</Color>
-    <Color x:Key="secondaryBackColor1">#24105F</Color>
-    <Color x:Key="secondaryBackColor2">#210F55</Color>
+    <Color x:Key="primaryBackColor1">#FF0C41</Color>
+    <Color x:Key="primaryBackColor2">#3700B6</Color>
+    <Color x:Key="secondaryBackColor1">#000133</Color>
+    <Color x:Key="secondaryBackColor2">#000122</Color>
     <!--Window Border Colors-->
     <Color x:Key="winBorderColor1">#F8D605</Color>
     <Color x:Key="winBorderColor2">#F36B1C</Color>
     <Color x:Key="winBorderColor3">#CE4912</Color>
     <!--Color Palette-->
-    <SolidColorBrush x:Key="color1" Color="#E285DE"/>
-    <SolidColorBrush x:Key="color2" Color="#784DFD"/>
-    <SolidColorBrush x:Key="color3" Color="#4ADAEC"/>
-    <SolidColorBrush x:Key="color4" Color="#FB539B"/>
-    <SolidColorBrush x:Key="color5" Color="#7E82FC"/>
-    <SolidColorBrush x:Key="color6" Color="#FFC047"/>
-    <SolidColorBrush x:Key="color7" Color="#EF6C96"/>
-    <SolidColorBrush x:Key="color8" Color="#78A3FC"/>
-    <SolidColorBrush x:Key="color9" Color="#07F3C0"/>
-    <SolidColorBrush x:Key="color10" Color="#FBA1AA"/>
+    <SolidColorBrush x:Key="color1" Color="#FFD2FF"/>
+    <SolidColorBrush x:Key="color2" Color="#C5C5FF"/>
+    <SolidColorBrush x:Key="color3" Color="#C5FFFF"/>
+    <SolidColorBrush x:Key="color4" Color="#FFB2C6"/>
+    <SolidColorBrush x:Key="color5" Color="#C5C5FF"/>
+    <SolidColorBrush x:Key="color6" Color="#FFFFC5"/>
+    <SolidColorBrush x:Key="color7" Color="#FFC5C5"/>
+    <SolidColorBrush x:Key="color8" Color="#C5C5FF"/>
+    <SolidColorBrush x:Key="color9" Color="#C5FFD2"/>
+    <SolidColorBrush x:Key="color10" Color="#FFC5D2"/>
     <!--Font Colors-->
     <SolidColorBrush x:Key="titleColor1" Color="#E0E1F1"/>
     <SolidColorBrush x:Key="titleColor2" Color="#D5CFF5"/>
